--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ build/
 # Local env
 .env
 
+# History
+.history/
+
+# Generated mobile/store icons (can be regenerated with `cargo tauri icon`)
+src-tauri/icons/android/
+src-tauri/icons/ios/
+src-tauri/icons/Square*.png
+src-tauri/icons/StoreLogo.png
+
