chore: update CI and release workflows to include rustfmt and clippy components
- Added rustfmt and clippy components to the Rust setup in CI and release workflows for improved code quality.
- Modified release asset paths to be more flexible by allowing any platform's bundle files to be uploaded.
- Introduced a step to list bundle files before uploading release assets.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@v2
@@ -98,6 +100,7 @@ jobs:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
         with:
+          components: rustfmt, clippy
           targets: ${{ matrix.os == 'macos-latest' && 'aarch64-apple-darwin' || '' }}
 
       - name: Cache Rust dependencies
@@ -129,7 +132,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           projectPath: src-tauri
-          args: ${{ matrix.args }}
+          args: ${{ matrix.args }} --bundles app
           tagName: app-v__VERSION__
           releaseName: "App v__VERSION__"
           releaseBody: "See the assets to download this version and install."
