fix: enable bundling and fix frontend build paths
- Enable bundling in tauri.conf.json with 'active: true'
- Add debugging steps to verify frontend dist directory exists
- Fix bundle file paths in release workflow to use correct target structure
- Add better error handling for missing bundle files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,8 +129,17 @@ jobs:
         working-directory: web
 
       - name: Build frontend
-        run: npm run build
+        run: |
+          echo "Building frontend..."
+          npm run build
+          echo "Frontend build completed"
+          ls -la dist || echo "dist directory not found in workspace root"
         working-directory: web
+
+      - name: Verify frontend dist exists
+        run: |
+          echo "Checking for dist directory in workspace root..."
+          ls -la ../dist || echo "dist directory not found in workspace root"
 
       - name: Build Tauri app
         uses: tauri-apps/tauri-action@v0
