--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
         with:
           path: |
             ~/.npm
+            ~/.cache/npm
             web/node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
@@ -61,6 +62,18 @@ jobs:
         run: npm run test
         working-directory: web
         continue-on-error: true
+
+      - name: Clean previous build
+        run: rm -rf ../dist
+        working-directory: web
+
+      - name: Build frontend for Tauri compilation
+        run: |
+          echo "Building frontend for Tauri compilation..."
+          npm run build
+          echo "Frontend build completed"
+          ls -la ../dist || (echo "dist directory not found in workspace root" && exit 1)
+        working-directory: web
 
       - name: Format check
         run: cargo fmt --all -- --check
@@ -119,6 +132,7 @@ jobs:
         with:
           path: |
             ~/.npm
+            ~/.cache/npm
             web/node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
@@ -129,14 +143,15 @@ jobs:
         working-directory: web
 
       - name: Clean previous build
-        run: rm -rf dist
+        run: rm -rf ../dist
+        working-directory: web
 
       - name: Build frontend
         run: |
           echo "Building frontend..."
           npm run build
           echo "Frontend build completed"
-          ls -la dist || (echo "dist directory not found in workspace root" && exit 1)
+          ls -la ../dist || (echo "dist directory not found in workspace root" && exit 1)
         working-directory: web
 
       - name: Verify frontend dist exists
