--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,7 @@ jobs:
         with:
           path: |
             ~/.npm
+            ~/.cache/npm
             web/node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
@@ -65,14 +66,15 @@ jobs:
         working-directory: web
 
       - name: Clean previous build
-        run: rm -rf dist
+        run: rm -rf ../dist
+        working-directory: web
 
       - name: Build frontend
         run: |
           echo "Building frontend..."
           npm run build
           echo "Frontend build completed"
-          ls -la dist || (echo "dist directory not found in workspace root" && exit 1)
+          ls -la ../dist || (echo "dist directory not found in workspace root" && exit 1)
         working-directory: web
 
       - name: Verify frontend dist exists
