fix: use cross-platform clean command for Windows compatibility
- Replace rm -rf with cross-platform bash command
- Add || true to prevent failures if directory doesn't exist
- Ensure bash shell is used on all platforms including Windows
- Fix Windows PowerShell parameter error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,9 @@ jobs:
         continue-on-error: true
 
       - name: Clean previous build
-        run: rm -rf ../dist
+        run: |
+          rm -rf ../dist || true
+        shell: bash
         working-directory: web
 
       - name: Build frontend for Tauri compilation
@@ -143,7 +145,9 @@ jobs:
         working-directory: web
 
       - name: Clean previous build
-        run: rm -rf ../dist
+        run: |
+          rm -rf ../dist || true
+        shell: bash
         working-directory: web
 
       - name: Build frontend
