--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,9 @@ jobs:
         working-directory: web
 
       - name: Clean previous build
-        run: rm -rf ../dist
+        run: |
+          rm -rf ../dist || true
+        shell: bash
         working-directory: web
 
       - name: Build frontend
